# cutils

./: .clang-format  .cmake-format.yaml  .cmakelintrc  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  Version.h.in
cmake/: BuildType.cmake  EmbUnitTest.cmake  FreeRTOS.cmake  TestUtil.cmake  arm-none-eabi.cmake
docs/: asyncio.md  dispatch_queue.md  list.md  notifier.md  pools.md  state_event_loop.md  state_machine.md  stringify.md  types.md
inc/cutils/: accumulator.h  asyncio.h  bst.h  dispatch_queue.h  endian.h  event_flag.h.in  free_list.h  klist.h  kqueue.h  library.h  log_buffer.h  logger.h  mutex.h.in  notifier.h  os_types.h  pool.h  ring_buffer.h  signal.h  state.h  state_event_loop.h  state_machine.h  task.h.in  ts_log_buffer.h  ts_queue.h.in  types.h
inc/cutils/c11/: c11threads.h  event_flag.h  mutex.h  task.h  ts_queue.h
inc/cutils/freertos/: event_flag.h  mutex.h  task.h  ts_queue.h
inc/cutils/pthread/: event_flag.h  mutex.h  task.h  ts_queue.h
src/: CMakeLists.txt  asyncio.c  bst.c  dispatch_queue.c  endian.c  library.c  log_buffer.c  logger.c  notifier.c  ring_buffer.c  state_event_loop.c  state_machine.c  ts_log_buffer.c
src/c11/: CMakeLists.txt  event_flag.c  logger.c  task.c
src/freertos/: CMakeLists.txt  task.c
src/pthread/: CMakeLists.txt  event_flag.c  task.c
tests/: CMakeLists.txt  accumulator_tests.c  all_embunit_tests.c  asyncio_test.c  dispatch_queue_tests.c  klist_test.c  klist_test.cpp  mem_ring_buffer_test.c  mem_ring_buffer_test.cpp  notifier_tests.c  os_test.c  os_test.cpp  pool_tests.c  queue_test.c  queue_tests.cpp  state_event_loop_tests.c
tests/freertos/GCC_ARM_CM7/: CMakeLists.txt  FreeRTOSConfig.h  linker.ld  main.c  retarget.c  startup.c
